basic console build
App completes basic actions in the console, retrieving and logging the weather for a city when inputted. Errors are also logged in the console.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <form action="#" id="form">
+        <input type="text" id="cityInput">
+        <button type="submit" id="submitInput"></button>
+    </form>
+
+
+        <script src="app.js"></script>
 </body>
 </html>
