--- a/index.html
+++ b/index.html
@@ -1,18 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <form action="#" id="form">
-        <input type="text" id="cityInput">
-        <button type="submit" id="submitInput"></button>
-    </form>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Weather App</title>
+  </head>
+  <body>
+    <div class="submit-bar">
+      <form action="#" id="form">
+        <input type="text" placeholder="search city" id="cityInput" />
+        <button type="submit" id="submitBtn">
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </button>
+      </form>
+    </div>
+    <div class="container">
+      <div class="central-container">
+        <div class="basic-info">
+          <h5 id="conditions">light rain</h5>
+          <h1 id="location">City Name, GB</h1>
+        </div>
+        <div class="main-info">
+          <div class="image-representation" id="icon">
+            <i class="fa-solid fa-cloud"></i>
+          </div>
+          <div class="data">
+            <h4 id="temperature">18&deg;C</h4>
+            <h5 id="feelsLike">
+              <i class="fa-solid fa-temperature-half"></i> feels like: 17&deg;C
+            </h5>
+            <h5 id="humidity">
+              <i class="fa-solid fa-water"></i> humidity: 82%
+            </h5>
+            <h5 id="windSpeed">
+              <i class="fa-solid fa-wind"></i> wind speed: 16.7km/h
+            </h5>
+          </div>
+        </div>
+      </div>
+    </div>
 
-
-        <script src="app.js"></script>
-</body>
+    <script src="app.js"></script>
+  </body>
 </html>
